<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymplan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_exerciseListFragment"
            app:destination="@id/exerciseListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.gymplan.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.gymplan.ui.home.HomeFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/exerciseListFragment"
        android:name="com.example.gymplan.ui.list.ExerciseListFragment"
        android:label="fragment_exercise_list"
        tools:layout="@layout/fragment_exercise_list" />
</navigation>