<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selectItem"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_workout"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/optionBtn">
        
        <AutoCompleteTextView
            android:id="@+id/homeSelectDropdownText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="none"
            android:text="@string/empty_workout_plan_list"
            />

    </com.google.android.material.textfield.TextInputLayout>
    
    <ImageButton
        android:id="@+id/optionBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_options_24"
        android:scaleType="fitXY"
        android:contentDescription="@string/option_icon_button"
        android:background="@android:color/transparent"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectItem"
        app:layout_constraintBottom_toBottomOf="@+id/selectItem"
        app:layout_constraintStart_toEndOf="@+id/selectItem"
        />

    <com.tsuryo.swipeablerv.SwipeableRecyclerView
        android:id="@+id/rvPlanList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:leftBgColor="@color/red"
        app:leftImage="@drawable/ic_delete"
        app:leftText="Delete"
        app:rightBgColor="@color/green_200"
        app:rightImage="@drawable/ic_edit"
        app:rightText="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_workout"/>


    <TextView
        android:id="@+id/emptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_workout_list"
        android:visibility="gone"
        android:textStyle="italic"
        android:paddingBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/centerAddFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        android:backgroundTint="?attr/colorPrimary"
        android:visibility="gone"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_add"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/leftBottomAddFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        android:backgroundTint="?attr/colorPrimary"
        android:visibility="gone"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>